[package]
name = "adaboost-rs"
version = "0.1.0"
edition = "2021"
authors = ["Antoon <antoonberes@hotmail.com>"]
license = "BSD-2-Clause"
# prSee more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ndarray-csv = "0.5"
ndarray = "0.15"
itertools = "0.10"
